[gd_scene load_steps=5 format=2]

[ext_resource path="res://assets/Courtroom.png" type="Texture" id=1]
[ext_resource path="res://Courtroom.gd" type="Script" id=2]
[ext_resource path="res://assets/DynamicFont.tres" type="DynamicFont" id=3]

[sub_resource type="Theme" id=2]
default_font = ExtResource( 3 )

[node name="Courtroom" type="Node2D"]
script = ExtResource( 2 )

[node name="CourtroomSprite" type="Sprite" parent="."]
position = Vector2( 960, 540 )
texture = ExtResource( 1 )

[node name="CourtroomTimer" type="Timer" parent="."]

[node name="CourtroomTimerLabel" type="Label" parent="."]
margin_left = 26.0
margin_right = 457.0
margin_bottom = 103.0
theme = SubResource( 2 )
text = "Time:  "
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CourtroomScoreLabel" type="Label" parent="."]
margin_left = 457.0
margin_right = 859.0
margin_bottom = 103.0
theme = SubResource( 2 )
text = "Score:  "
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="timeout" from="CourtroomTimer" to="." method="_on_CourtroomTimer_timeout"]
